# CUDA-flocking-boid

./: .clang-tidy  .gitignore  CMakeLists.txt  README.org  conanfile.txt
cmake/: conan.cmake
src/: glslUtility.cpp  kernel.cu  kernel.h  main.cpp  main.hpp
